--- a/Assignment_2/train_standard.ipynb
+++ b/Assignment_2/train_standard.ipynb
@@ -2,16 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import pandas;\n",
-    "import seaborn as sb;\n",
     "import numpy as np;\n",
-    "import matplotlib.pyplot as plt\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.naive_bayes import GaussianNB, MultinomialNB, BernoulliNB\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
+    "\n",
     "%matplotlib inline\n",
     "np.set_printoptions(suppress=True)\n",
     "\n",
@@ -45,8 +51,11 @@
     "    return phi_normalize;\n",
     "    pass;\n",
     "\n",
-    "def writeTestData(test_id,ystar,filenumber=0):    \n",
-    "    fo = open(\"sampleSubmission-\"+str(filenumber)+\".csv\", \"w\");               \n",
+    "def writeTestData(test_id,ystar,filenumber=0,filename=None):\n",
+    "    if(filename==None):\n",
+    "        fo = open(\"log/output/sampleSubmission-\"+str(filenumber)+\".csv\", \"w\");               \n",
+    "    else:\n",
+    "        fo = open(filename+\".csv\", \"w\");        \n",
     "    fo.write(\"id,salary\\n\");\n",
     "    m=len(ystar);\n",
     "    for i in range(m):\n",
@@ -111,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -185,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -197,19 +206,109 @@
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
-      "          verbose=0, warm_start=False)\n"
+      "          verbose=0, warm_start=False)\n",
+      "Done..\n",
+      "Done..\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Misclassified Points</th>\n",
+       "      <th>Accuracy</th>\n",
+       "      <th>AUC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Decision Tree</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Random Forest</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>K-Neighbors</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gradient Boosting</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>My Model</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Logistic Regression</th>\n",
+       "      <td>7889</td>\n",
+       "      <td>0.797578</td>\n",
+       "      <td>0.762365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Support Vector</th>\n",
+       "      <td>1289</td>\n",
+       "      <td>0.966926</td>\n",
+       "      <td>0.977842</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Multinomial NB</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bernoulli NB</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gaussian NB</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Misclassified Points  Accuracy       AUC\n",
+       "Decision Tree                        NaN       NaN       NaN\n",
+       "Random Forest                        NaN       NaN       NaN\n",
+       "K-Neighbors                          NaN       NaN       NaN\n",
+       "Gradient Boosting                    NaN       NaN       NaN\n",
+       "My Model                             NaN       NaN       NaN\n",
+       "Logistic Regression                 7889  0.797578  0.762365\n",
+       "Support Vector                      1289  0.966926  0.977842\n",
+       "Multinomial NB                       NaN       NaN       NaN\n",
+       "Bernoulli NB                         NaN       NaN       NaN\n",
+       "Gaussian NB                          NaN       NaN       NaN"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.metrics import roc_auc_score\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.naive_bayes import GaussianNB, MultinomialNB, BernoulliNB\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
-    "\n",
     "td=dummy_trained_data;\n",
     "X = td;\n",
     "y = np.ravel(trained_y)\n",
@@ -224,21 +323,175 @@
     "rfc = 1, RandomForestClassifier()\n",
     "knn = 2, KNeighborsClassifier()\n",
     "gbc = 3, GradientBoostingClassifier()\n",
-    "lgr = 5, LogisticRegression()\n",
+    "lgr = 5, LogisticRegression(penalty='l2',max_iter=100)\n",
     "svc = 6, SVC()\n",
     "mnb = 7, MultinomialNB()\n",
     "bnb = 8, BernoulliNB()\n",
     "gnb = 9, GaussianNB()\n",
     "print(lgr[1]);\n",
-    "for i in lgr,svc:\n",
-    "    y_pred = i[1].fit(X, y).predict(X)\n",
-    "    misclassifedPoints = (y_pred != y).sum()\n",
-    "    accuracy = (len(td.index) - misclassifedPoints) / len(td.index)\n",
-    "    AUC = roc_auc_score(y_pred, y)\n",
-    "    modelComparision.ix[i[0]] = [misclassifedPoints, accuracy, AUC]\n",
+    "\n",
+    "classfier=lgr;\n",
+    "y_pred = classfier[1].fit(X, y).predict(X)\n",
+    "misclassifedPoints = (y_pred != y).sum()\n",
+    "accuracy = (len(td.index) - misclassifedPoints) / len(td.index)\n",
+    "AUC = roc_auc_score(y_pred, y)\n",
+    "modelComparision.ix[classfier[0]] = [misclassifedPoints, accuracy, AUC]\n",
+    "print(\"Done..\");\n",
+    "\n",
+    "\n",
+    "classfier=svc;\n",
+    "y_pred = classfier[1].fit(X, y).predict(X)\n",
+    "misclassifedPoints = (y_pred != y).sum()\n",
+    "accuracy = (len(td.index) - misclassifedPoints) / len(td.index)\n",
+    "AUC = roc_auc_score(y_pred, y)\n",
+    "modelComparision.ix[classfier[0]] = [misclassifedPoints, accuracy, AUC]\n",
+    "print(\"Done..\")\n",
     "\n",
     "modelComparision"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done..\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Misclassified Points</th>\n",
+       "      <th>Accuracy</th>\n",
+       "      <th>AUC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Decision Tree</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Random Forest</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>K-Neighbors</th>\n",
+       "      <td>6373</td>\n",
+       "      <td>0.836477</td>\n",
+       "      <td>0.804094</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gradient Boosting</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>My Model</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Logistic Regression</th>\n",
+       "      <td>7889</td>\n",
+       "      <td>0.797578</td>\n",
+       "      <td>0.762365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Support Vector</th>\n",
+       "      <td>1289</td>\n",
+       "      <td>0.966926</td>\n",
+       "      <td>0.977842</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Multinomial NB</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bernoulli NB</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gaussian NB</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Misclassified Points  Accuracy       AUC\n",
+       "Decision Tree                        NaN       NaN       NaN\n",
+       "Random Forest                        NaN       NaN       NaN\n",
+       "K-Neighbors                         6373  0.836477  0.804094\n",
+       "Gradient Boosting                    NaN       NaN       NaN\n",
+       "My Model                             NaN       NaN       NaN\n",
+       "Logistic Regression                 7889  0.797578  0.762365\n",
+       "Support Vector                      1289  0.966926  0.977842\n",
+       "Multinomial NB                       NaN       NaN       NaN\n",
+       "Bernoulli NB                         NaN       NaN       NaN\n",
+       "Gaussian NB                          NaN       NaN       NaN"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classfier=knn;\n",
+    "y_pred = classfier[1].fit(X, y).predict(X)\n",
+    "misclassifedPoints = (y_pred != y).sum()\n",
+    "accuracy = (len(td.index) - misclassifedPoints) / len(td.index)\n",
+    "AUC = roc_auc_score(y_pred, y)\n",
+    "modelComparision.ix[classfier[0]] = [misclassifedPoints, accuracy, AUC]\n",
+    "print(\"Done..\")\n",
+    "\n",
+    "modelComparision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, ..., 0, 0, 0])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
